PyMaker/datas/object2/RawHTML/i4401/Python_DOC_referPages.getting-error-when-trying-to-run-server-having-django-channels.txt
<div class="post-text" itemprop="text">
<p>I am trying to use django-channels in my django-project and getting this error while trying to run the server. I am following this tutorial to build chatting application. </p>
<p><a href="https://gearheart.io/blog/creating-a-chat-with-django-channels/" rel="nofollow noreferrer">https://gearheart.io/blog/creating-a-chat-with-django-channels/</a></p>
<pre><code>Unhandled exception in thread started by &lt;function check_errors.&lt;locals&gt;.wrapper at 0x7fb7aa2b1e18&gt;
Traceback (most recent call last):
  File "/home/praneet/pral/jagrit/newenv/lib/python3.4/site-packages/django/utils/autoreload.py", line 225, in wrapper
    fn(*args, **kwargs)
  File "/home/praneet/pral/jagrit/newenv/lib/python3.4/site-packages/django/core/management/commands/runserver.py", line 112, in inner_run
    autoreload.raise_last_exception()
  File "/home/praneet/pral/jagrit/newenv/lib/python3.4/site-packages/django/utils/autoreload.py", line 248, in raise_last_exception
    raise _exception[1]
  File "/home/praneet/pral/jagrit/newenv/lib/python3.4/site-packages/django/core/management/__init__.py", line 327, in execute
    autoreload.check_errors(django.setup)()
  File "/home/praneet/pral/jagrit/newenv/lib/python3.4/site-packages/django/utils/autoreload.py", line 225, in wrapper
    fn(*args, **kwargs)
  File "/home/praneet/pral/jagrit/newenv/lib/python3.4/site-packages/django/__init__.py", line 24, in setup
    apps.populate(settings.INSTALLED_APPS)
  File "/home/praneet/pral/jagrit/newenv/lib/python3.4/site-packages/django/apps/registry.py", line 89, in populate
    app_config = AppConfig.create(entry)
  File "/home/praneet/pral/jagrit/newenv/lib/python3.4/site-packages/django/apps/config.py", line 116, in create
    mod = import_module(mod_path)
  File "/usr/lib/python3.4/importlib/__init__.py", line 109, in import_module
    return _bootstrap._gcd_import(name[level:], package, level)
  File "&lt;frozen importlib._bootstrap&gt;", line 2254, in _gcd_import
  File "&lt;frozen importlib._bootstrap&gt;", line 2237, in _find_and_load
  File "&lt;frozen importlib._bootstrap&gt;", line 2226, in _find_and_load_unlocked
  File "&lt;frozen importlib._bootstrap&gt;", line 1200, in _load_unlocked
  File "&lt;frozen importlib._bootstrap&gt;", line 1129, in _exec
  File "&lt;frozen importlib._bootstrap&gt;", line 1471, in exec_module
  File "&lt;frozen importlib._bootstrap&gt;", line 321, in _call_with_frames_removed
  File "/home/praneet/pral/jagrit/newenv/lib/python3.4/site-packages/channels/apps.py", line 6, in &lt;module&gt;
    import daphne.server  # noqa
  File "/home/praneet/pral/jagrit/newenv/lib/python3.4/site-packages/daphne/server.py", line 192
    async def handle_reply(self, protocol, message):
            ^
SyntaxError: invalid syntax
</code></pre>
</div>
<div class="post-text" itemprop="text">
<p>Channels 2 <a href="https://channels.readthedocs.io/en/latest/releases/2.0.0.html#release-notes" rel="nofollow noreferrer">dropped support</a> for Python 2.7 and 3.4. It now requires Python 3.5 or 3.6.</p>
<p>The <a href="https://docs.python.org/3/library/asyncio-task.html#coroutines" rel="nofollow noreferrer"><code>async def</code></a> statement was added in Python 3.5. You get a syntax error because you're using Python 3.4.</p>
</div>
